Fixed layout issues on the general mailing list

--- a/public/stylesheets/koop.css
+++ b/public/stylesheets/koop.css
@@ -81,6 +81,12 @@ h1 {
   color: #000;
 }
 
+.footer .textfield {
+  width: 190px;
+  margin-right: 5px;
+  margin-top: 10px;
+}
+
 .red-rover {
   background-color: black;
   background-image: url("starbg.png");
@@ -148,7 +154,7 @@ a .none {
 .ko-op .textfield {
   width: 170px;
   margin-right: 5px;
-  margin-top: 10px;
+  margin-top: 15px;
 }
 
 .ko-op .field {
